#15 pom.xml fix